INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB DYNAMIND_CPPS *.cpp)

SET_SOURCE_FILES_PROPERTIES(${CMAKE_BINARY_DIR}/pydynamindWRAP.cpp PROPERTIES GENERATED 1)
SET(DYNAMIND_CPPS ${DYNAMIND_CPPS} ../python-swig/dmpythonenv.cpp ${CMAKE_BINARY_DIR}/pydynamindWRAP.cpp)


INCLUDE_DIRECTORIES(../DMToolboxes)

ADD_EXECUTABLE(dynamind ${DYNAMIND_CPPS} )

ADD_DEPENDENCIES(dynamind pydynamindgen)

TARGET_LINK_LIBRARIES(dynamind dynamindcore dynamindtoolbox ${Boost_LIBRARIES} ${QT_LIBRARIES} ${PYTHON_LIBRARIES})

INSTALL(TARGETS dynamind
        DESTINATION "bin"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
