FILE(GLOB MODULE_CPPS *.cpp)
FILE(GLOB MODULE_H *.h)
FILE(GLOB MODULE_UI_FILES *.ui)
FILE(GLOB MODULE_CPPS_mu *.cpp ../3dparty/muparser/src/*.cpp)
FILE(GLOB MODULE_CPPS_mux *.cpp ../3dparty/muparserx/parser/*.cpp)

IF(USEQT5)
    QT5_WRAP_UI(MODULE_CPPS ${MODULE_UI_FILES})
    QT5_WRAP_CPP(MODULE_CPPS ${MOC_MODULE_FILES})
ELSE()
    QT4_WRAP_UI(MODULE_CPPS ${MODULE_UI_FILES})
    QT4_WRAP_CPP(MODULE_CPPS ${MOC_MODULE_FILES})
ENDIF()

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../3dparty/muparser/include)
INCLUDE_DIRECTORIES(../3dparty/muparserx)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${DYNAMIND_EXTENSIONS_INCLUDE_DIR})

ADD_LIBRARY(dynamind-basicmodules SHARED ${MODULE_CPPS} ${MODULE_H} ${MODULE_CPPS_mu}  ${MODULE_CPPS_mux} )

SET_TARGET_PROPERTIES(dynamind-basicmodules PROPERTIES AUTOMOC TRUE)

TARGET_LINK_LIBRARIES(dynamind-basicmodules  ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${QT_LIBRARIES} ${GDAL_LIBRARY})

INSTALL(TARGETS dynamind-basicmodules
		DESTINATION "share/DynaMind/native_extensions"
		PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)



