INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB DYNAMIND_CPPS *.cpp)
FILE(GLOB DYNAMIND_HEADER *.h)

set_source_files_properties(${OUTPUT_DIR}/pydynamindWRAP.cpp PROPERTIES GENERATED 1)
SET(DYNAMIND_CPPS ${DYNAMIND_CPPS} ../python-swig/dmpythonenv.cpp ${OUTPUT_DIR}/pydynamindWRAP.cpp)

ADD_LIBRARY(dynamindcore  SHARED ${DYNAMIND_CPPS})

TARGET_LINK_LIBRARIES(dynamindcore ${QT_LIBRARIES} ${PYTHON_LIBRARIES} ${QT_QTMAIN_LIBRARY})

add_dependencies(dynamindcore pydynamindgen pydmtoolboxgen)

INSTALL(TARGETS dynamindcore
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

IF(WIN32)
    INSTALL(FILES ${OUTPUT_DIR}/dynamindcore.lib
            DESTINATION lib
            PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
ENDIF()

INSTALL(FILES ${DYNAMIND_HEADER}
        DESTINATION "include/dynamindcore"
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
