INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# sql stuff
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTSQL true)
# ADD_DEFINITIONS(-DQT_NO_KEYWORDS)
INCLUDE(${QT_USE_FILE})

FILE(GLOB DYNAMIND_CPPS *.cpp)
FILE(GLOB DYNAMIND_HEADER *.h)

IF(PYTHON_EMBEDDING)
    SET(DYNAMIND_CPPS ${DYNAMIND_CPPS} ../python-swig/dmpythonenv.cpp)
ENDIF()

ADD_LIBRARY(dynamindcore SHARED ${DYNAMIND_CPPS} ${DYNAMIND_HEADER})

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
        SET_TARGET_PROPERTIES(dynamindcore PROPERTIES COMPILE_FLAGS "/frounding-math")
ENDIF()

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
        SET_TARGET_PROPERTIES(dynamindcore PROPERTIES COMPILE_FLAGS "-frounding-math")
ENDIF()

TARGET_LINK_LIBRARIES(dynamindcore ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY} ${QT_QTSQL_LIBRARIES})

IF(PYTHON_EMBEDDING)
    TARGET_LINK_LIBRARIES(dynamindcore ${PYTHON_LIBRARIES})
    ADD_DEPENDENCIES(dynamindcore pydynamindgen pydmtoolboxgen)
ENDIF()

INSTALL(TARGETS dynamindcore
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

IF(WIN32)
    INSTALL(FILES ${OUTPUT_DIR}/dynamindcore.lib
            DESTINATION lib
            PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
ENDIF()

INSTALL(FILES ${DYNAMIND_HEADER}
        DESTINATION "include/dynamindcore"
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
