INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB DYNAMIND_CPPS *.cpp)
FILE(GLOB DYNAMIND_HEADER *.h)

IF(PYTHON_EMBEDDING)
    SET(DYNAMIND_CPPS ${DYNAMIND_CPPS} ../python-swig/dmpythonenv.cpp)
ENDIF()

ADD_LIBRARY(dynamindcore SHARED ${DYNAMIND_CPPS} ${DYNAMIND_HEADER})

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
        SET_TARGET_PROPERTIES(dynamindcore PROPERTIES COMPILE_FLAGS "-frounding-math")
ENDIF()

IF(USEQT5)
    TARGET_LINK_LIBRARIES(dynamindcore Qt5::Gui Qt5::Core Qt5::Sql Qt5::Concurrent Qt5::Xml ${GDAL_LIBRARY})
ELSE()
    TARGET_LINK_LIBRARIES(dynamindcore ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY} ${QT_QTSQL_LIBRARIES} ${GDAL_LIBRARY})
ENDIF()

IF(PYTHON_EMBEDDING)
    TARGET_LINK_LIBRARIES(dynamindcore ${PYTHON_LIBRARIES})
    #ADD_DEPENDENCIES(dynamindcore pydynamindgen pydmtoolboxgen)
ENDIF()

INSTALL(TARGETS dynamindcore
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
		PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

IF(WIN32 OR WIN64)
    INSTALL(FILES ${OUTPUT_DIR}/dynamindcore.lib
            DESTINATION lib
            PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
ENDIF()

INSTALL(FILES ${DYNAMIND_HEADER}
        DESTINATION "include/dynamindcore"
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
