FILE(GLOB MODULE_CPPS *.cpp)
FILE(GLOB MODULE_H *.h)

INCLUDE_DIRECTORIES(../../3rdparty/swmm)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${DYNAMIND_EXTENSIONS_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${SFCGAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES()

ADD_LIBRARY(gdal_drainage_modules SHARED ${MODULE_CPPS} ${MODULE_H}  ${MODULE_CPPS_mux})

SET_TARGET_PROPERTIES(gdal_drainage_modules PROPERTIES AUTOMOC TRUE)

TARGET_LINK_LIBRARIES(gdal_drainage_modules swmm5 ${GEOS_LIBRARY} ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${QT_LIBRARIES} ${GDAL_LIBRARY} ${SFCGAL_LIBRARY})

INSTALL(TARGETS gdal_drainage_modules
		DESTINATION "share/DynaMind/native_extensions"
		PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)



