INCLUDE_DIRECTORIES(../libdynamind-gui/)
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../libdynamind-gui)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../libdynamind-gui)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../dynamind-gui/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../dynamind-gui)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(muparser/include ../3dparty/qwt-5.2.0/src)
FILE(GLOB DynaMind *.cpp)


QT4_ADD_RESOURCES(DynaMind icons.qrc)

ADD_EXECUTABLE( dynamind-gui ${DynaMind} )

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
       TARGET_LINK_LIBRARIES(dynamind-gui dynamindgui dynamind-viewer ${DYNAMIND_CORE_LIBRARY} ${QT_QTMAIN_LIBRARY} ${QT_LIBRARIES} ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES})
ELSE()
       TARGET_LINK_LIBRARIES(dynamind-gui dynamindgui dynamind-viewer ${DYNAMIND_CORE_LIBRARY} ${QT_QTMAIN_LIBRARY} ${QT_LIBRARIES} ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES})
ENDIF()


