FILE(GLOB MODULE_CPPS *.cpp)
FILE(GLOB MODULE_UI_FILES *.ui)

IF(NOT WIN32)
        SET(CMAKE_CXX_FLAGS "-frounding-math" )
ENDIF()

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake/Packages")

FIND_PACKAGE(vibe2core)

IF(vibe2core_FOUND)
    MESSAGE("VIBE found")

    INCLUDE_DIRECTORIES(.)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
    INCLUDE_DIRECTORIES(${VIBE2CORE_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(../DMToolboxes)

    ADD_LIBRARY(dynamind-vibe2 SHARED ${MODULE_CPPS})

    TARGET_LINK_LIBRARIES(dynamind-vibe2 dynamindtoolbox dynamindcore  ${VIBE2CORE_LIBRARIES} ${VIBE2HELPER_LIBRARIES} ${QT_LIBRARIES})

    INSTALL(TARGETS dynamind-vibe2
            DESTINATION "lib"
            PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
ELSE()
    MESSAGE("VIBE2 not installed - VIBE2 module disabled")
endif()


